fix the pulse effect on mobile and h2 size

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ h1 {
 h2 {
     margin-bottom: 20px;
     margin-top: 20px;
+    font-size: 1.3em;
 }
 
 h4 {
